update(glpi-agent 1.11): update log path

--- a/Windows/glpi-agent_1.11/agent.cfg
+++ b/Windows/glpi-agent_1.11/agent.cfg
@@ -111,7 +111,7 @@ httpd-trust =[HTTPD_TRUST]
 # Logger backend, either Stderr, File or Syslog (Stderr)
 logger = stderr
 # log file
-#logfile = /var/log/glpi-agent.log
+logfile = "C:\Program Files\GLPI-Agent\logs\glpi-agent.log"
 # maximum log file size, in MB
 #logfile-maxsize = 0
 # Syslog facility
