update(glpi-agent 1.11): update parameters

--- a/Windows/glpi-agent_1.11/agent.cfg
+++ b/Windows/glpi-agent_1.11/agent.cfg
@@ -49,7 +49,7 @@ scan-homedirs = 1
 # allow to scan user profiles
 scan-profiles = 1
 # save the inventory as HTML
-html = 0
+html = 1
 # set to 1 to save local inventory as JSON
 json = 1
 # timeout for inventory modules execution
@@ -57,7 +57,7 @@ backend-collect-timeout = 180
 # always send data to server
 force = 1
 # additional inventory content file
-additional-content =
+#additional-content =
 
 # asset name returned
 # if 1 (the default), the short hostname is used as asset name
@@ -87,7 +87,7 @@ ca-cert-dir =
 # CA certificates file
 ca-cert-file =
 # do not check server SSL certificate
-no-ssl-check = 0
+no-ssl-check = 1
 # connection timeout, in seconds
 timeout = 180
 
@@ -98,22 +98,22 @@ timeout = 180
 # disable embedded web server
 no-httpd = 0
 # network interface to listen to
-httpd-ip =[HTTPD_IP]
+httpd-ip = [HTTPD_IP]
 # network port to listen to
 httpd-port = [HTTPD_PORT]
 # trust requests without authentication token
-httpd-trust =[HTTPD_TRUST]
+httpd-trust = [HTTPD_TRUST]
 
 #
 # Logging options
 #
 
 # Logger backend, either Stderr, File or Syslog (Stderr)
-logger = stderr
+logger = file
 # log file
 logfile = "C:\Program Files\GLPI-Agent\logs\glpi-agent.log"
 # maximum log file size, in MB
-#logfile-maxsize = 0
+logfile-maxsize = 2
 # Syslog facility
 logfacility = LOG_USER
 # Use color in the console
@@ -147,8 +147,11 @@ debug = 2
 #
 # Custom configuration
 listen = 1
-
-
+no-compression = 0
+#vardir = 
+#full-inventory-postpone = 
+#remote-workers = 
+#snmp-retries = 0
 
 include "conf.d/"
 #include "agent.local"
