--- a/Windows/glpi-agent_1.11/agent.cfg
+++ b/Windows/glpi-agent_1.11/agent.cfg
@@ -70,7 +70,7 @@ assetname-support = 1
 #
 
 # do not use peer to peer to download files
-no-p2p = 0
+no-p2p = 1
 
 #
 # Network options
@@ -149,9 +149,9 @@ debug = 2
 listen = 1
 no-compression = 0
 #vardir = 
-#full-inventory-postpone = 
-#remote-workers = 
-#snmp-retries = 0
+full-inventory-postpone = 14
+remote-workers = 0
+snmp-retries = 0
 
 include "conf.d/"
 #include "agent.local"
