feat(glpi-agent): add linux configuration file

--- a/Linux/glpi-agent_1.11/agent.cfg
+++ b/Linux/glpi-agent_1.11/agent.cfg
@@ -111,7 +111,7 @@ httpd-trust = [HTTPD_TRUST]
 # Logger backend, either Stderr, File or Syslog (Stderr)
 logger = file
 # log file
-logfile = "C:\Program Files\GLPI-Agent\logs\glpi-agent.log"
+logfile = "/var/log/glpi-agent/agent_info.log"
 # maximum log file size, in MB
 logfile-maxsize = 2
 # Syslog facility
